// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`The CitrexSDK > should initialise correctly with all config parameters passed 1`] = `
CitrexSDK {
  "account": {
    "address": "0xb47B0b1e44B932Ae9Bb01817E7010A553A965Ea8",
    "experimental_signAuthorization": [Function],
    "nonceManager": undefined,
    "publicKey": "0x0422eea015a8664523fce2eed5de514ad98a29724755c488f3d11d913d5671c881bc2d7b1e0d17389604ef141a96830b14917b034b7621579d1159d694dd231798",
    "sign": [Function],
    "signMessage": [Function],
    "signTransaction": [Function],
    "signTypedData": [Function],
    "source": "privateKey",
    "type": "local",
  },
  "apiUrl": "https://api.staging.citrex.markets/v1",
  "calculateMarginRequirement": [Function],
  "cancelAndReplaceOrder": [Function],
  "cancelOpenOrdersForProduct": [Function],
  "cancelOrder": [Function],
  "cancelOrders": [Function],
  "chain": {
    "blockExplorers": {
      "default": {
        "name": "Seitrace",
        "url": "https://seitrace.com",
      },
    },
    "fees": undefined,
    "formatters": undefined,
    "id": 1328,
    "name": "Sei Testnet",
    "nativeCurrency": {
      "decimals": 18,
      "name": "Sei",
      "symbol": "SEI",
    },
    "rpcUrls": {
      "default": {
        "http": [
          "https://evm-rpc-testnet.sei-apis.com",
        ],
        "webSocket": [
          "wss://evm-ws-testnet.sei-apis.com",
        ],
      },
    },
    "serializers": undefined,
    "testnet": true,
  },
  "ciaoAddress": "0x0F571400ef7D2aEc68b29e58be3adCE1Bb27f33d",
  "deposit": [Function],
  "domain": {
    "chainId": 1328n,
    "name": "ciao",
    "verifyingContract": "0x24f4e9Db8225e6AE220FE89782E4A010aEB7bb14",
    "version": "0.0.0",
  },
  "environment": "testnet",
  "getAccountHealth": [Function],
  "getKlines": [Function],
  "getOrderBook": [Function],
  "getProduct": [Function],
  "getProducts": [Function],
  "getServerTime": [Function],
  "getTickers": [Function],
  "getTradeHistory": [Function],
  "listBalances": [Function],
  "listOpenOrders": [Function],
  "listPositions": [Function],
  "logs": [
    {
      "msg": "Debug mode enabled",
    },
  ],
  "marginAssets": {
    "USDC": "0x79A59c326C715AC2d31C169C85d1232319E341ce",
  },
  "placeOrder": [Function],
  "placeOrders": [Function],
  "publicClient": {},
  "rpc": "https://test-rpc.quiknode.pro",
  "subAccountId": 2,
  "verifierAddress": "0x24f4e9Db8225e6AE220FE89782E4A010aEB7bb14",
  "withdraw": [Function],
}
`;

exports[`The CitrexSDK > should initialise correctly with only required params 1`] = `
CitrexSDK {
  "account": {
    "address": "0xb47B0b1e44B932Ae9Bb01817E7010A553A965Ea8",
    "experimental_signAuthorization": [Function],
    "nonceManager": undefined,
    "publicKey": "0x0422eea015a8664523fce2eed5de514ad98a29724755c488f3d11d913d5671c881bc2d7b1e0d17389604ef141a96830b14917b034b7621579d1159d694dd231798",
    "sign": [Function],
    "signMessage": [Function],
    "signTransaction": [Function],
    "signTypedData": [Function],
    "source": "privateKey",
    "type": "local",
  },
  "apiUrl": "https://api.staging.citrex.markets/v1",
  "calculateMarginRequirement": [Function],
  "cancelAndReplaceOrder": [Function],
  "cancelOpenOrdersForProduct": [Function],
  "cancelOrder": [Function],
  "cancelOrders": [Function],
  "chain": {
    "blockExplorers": {
      "default": {
        "name": "Seitrace",
        "url": "https://seitrace.com",
      },
    },
    "fees": undefined,
    "formatters": undefined,
    "id": 1328,
    "name": "Sei Testnet",
    "nativeCurrency": {
      "decimals": 18,
      "name": "Sei",
      "symbol": "SEI",
    },
    "rpcUrls": {
      "default": {
        "http": [
          "https://evm-rpc-testnet.sei-apis.com",
        ],
        "webSocket": [
          "wss://evm-ws-testnet.sei-apis.com",
        ],
      },
    },
    "serializers": undefined,
    "testnet": true,
  },
  "ciaoAddress": "0x0F571400ef7D2aEc68b29e58be3adCE1Bb27f33d",
  "deposit": [Function],
  "domain": {
    "chainId": 1328n,
    "name": "ciao",
    "verifyingContract": "0x24f4e9Db8225e6AE220FE89782E4A010aEB7bb14",
    "version": "0.0.0",
  },
  "environment": "testnet",
  "getAccountHealth": [Function],
  "getKlines": [Function],
  "getOrderBook": [Function],
  "getProduct": [Function],
  "getProducts": [Function],
  "getServerTime": [Function],
  "getTickers": [Function],
  "getTradeHistory": [Function],
  "listBalances": [Function],
  "listOpenOrders": [Function],
  "listPositions": [Function],
  "logs": [],
  "marginAssets": {
    "USDC": "0x79A59c326C715AC2d31C169C85d1232319E341ce",
  },
  "placeOrder": [Function],
  "placeOrders": [Function],
  "publicClient": {},
  "rpc": "https://evm-rpc-testnet.sei-apis.com",
  "subAccountId": 1,
  "verifierAddress": "0x24f4e9Db8225e6AE220FE89782E4A010aEB7bb14",
  "withdraw": [Function],
}
`;
